@@ -11,8 +11,9 @@ end;; (* fail *)
 Line 3, characters 2-29:
 3 |   type _ t = T : 'a -> 'a s t
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^
-Error: In this definition, a type variable cannot be deduced
-       from the type parameters.
+Error: In the GADT constructor
+         T : 'a -> 'a s t
+       the type variable 'a cannot be deduced from the type parameters.
 |}];;
 (*
 module M = F (struct type 'a s = int end) ;;
@@ -40,8 +41,9 @@ end;; (* fail *)
 Lines 2-3, characters 2-67:
 2 | ..class ['a] c x =
 3 |     object constraint 'a = 'b T.t val x' : 'b = x method x = x' end
-Error: In this definition, a type variable cannot be deduced
-       from the type parameters.
+Error: In the definition
+         type 'a c = < x : 'b > constraint 'a = 'b T.t
+       the type variable 'b cannot be deduced from the type parameters.
 |}];;
 
 (* Another (more direct) instance using polymorphic variants *)
@@ -54,8 +56,9 @@ let magic (x : int) : bool  =
 Line 1, characters 0-49:
 1 | type 'x t = A of 'a constraint 'x = [< `X of 'a ] ;; (* fail *)
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-Error: In this definition, a type variable cannot be deduced
-       from the type parameters.
+Error: In the definition
+         type 'b t = A of 'a constraint 'b = [< `X of 'a ]
+       the type variable 'a cannot be deduced from the type parameters.
 |}];;
 
 type 'a t = A : 'a -> [< `X of 'a ] t;; (* fail *)
@@ -63,8 +66,9 @@ type 'a t = A : 'a -> [< `X of 'a ] t;; (* fail *)
 Line 1, characters 0-37:
 1 | type 'a t = A : 'a -> [< `X of 'a ] t;; (* fail *)
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-Error: In this definition, a type variable cannot be deduced
-       from the type parameters.
+Error: In the GADT constructor
+         A : 'a -> [< `X of 'a ] t
+       the type variable 'a cannot be deduced from the type parameters.
 |}];;
 
 (* It is not OK to allow modules exported by other compilation units *)
@@ -79,8 +83,9 @@ val eq : (('a, 'b) Ephemeron.K1.t, ('c, 'd) Ephemeron.K1.t) eq = Eq
 Line 4, characters 0-46:
 4 | type _ t = T : 'a -> ('a, 'b) Ephemeron.K1.t t;; (* fail *)
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-Error: In this definition, a type variable cannot be deduced
-       from the type parameters.
+Error: In the GADT constructor
+         T : 'a -> ('a, 'b) Ephemeron.K1.t t
+       the type variable 'a cannot be deduced from the type parameters.
 |}];;
 (*
 let castT (type a) (type b) (x : a t) (e: (a, b) eq) : b t =
@@ -97,8 +102,9 @@ end;; (* fail *)
 Line 3, characters 2-29:
 3 |   type _ t = T : 'a -> 'a s t
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^
-Error: In this definition, a type variable cannot be deduced
-       from the type parameters.
+Error: In the GADT constructor
+         T : 'a -> 'a s t
+       the type variable 'a cannot be deduced from the type parameters.
 |}];;
 (* Otherwise we can write the following *)
 module rec M : (S with type 'a s = unit) = M;;
@@ -131,7 +137,9 @@ type 'a q = Q
 Line 2, characters 0-36:
 2 | type +'a t = 'b constraint 'a = 'b q;;
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-Error: In this definition, a type variable has a variance that
+Error: In the definition
+         type +'a t = 'b constraint 'a = 'b q
+       the type variable 'b has a variance that
        cannot be deduced from the type parameters.
        It was expected to be unrestricted, but it is covariant.
 |}];;
@@ -148,7 +156,9 @@ type -'a s = 'b constraint 'a = 'b t;; (* fail *)
 Line 1, characters 0-36:
 1 | type -'a s = 'b constraint 'a = 'b t;; (* fail *)
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-Error: In this definition, a type variable has a variance that
+Error: In the definition
+         type -'a s = 'b constraint 'a = 'b t
+       the type variable 'b has a variance that
        is not reflected by its occurrence in type parameters.
        It was expected to be contravariant, but it is covariant.
 |}];;
@@ -169,7 +179,9 @@ type +'a s = 'b constraint 'a = 'b t q;; (* fail *)
 Line 1, characters 0-38:
 1 | type +'a s = 'b constraint 'a = 'b t q;; (* fail *)
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-Error: In this definition, a type variable has a variance that
+Error: In the definition
+         type +'a s = 'b constraint 'a = 'b t q
+       the type variable 'b has a variance that
        cannot be deduced from the type parameters.
        It was expected to be unrestricted, but it is covariant.
 |}];;
@@ -197,6 +209,7 @@ type +'a t = unit constraint 'a = 'b list
 Line 2, characters 0-27:
 2 | type _ g = G : 'a -> 'a t g;; (* fail *)
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
-Error: In this definition, a type variable cannot be deduced
-       from the type parameters.
+Error: In the GADT constructor
+         G : 'a list -> 'a list t g
+       the type variable 'a cannot be deduced from the type parameters.
 |}];;
