@@ -54,16 +54,18 @@ type _ t = N : 'a -> 'a N.t t (* KO *)
 Line 1, characters 0-29:
 1 | type _ t = N : 'a -> 'a N.t t (* KO *)
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-Error: In this definition, a type variable cannot be deduced
-       from the type parameters.
+Error: In the GADT constructor
+         N : 'a -> 'a N.t t
+       the type variable 'a cannot be deduced from the type parameters.
 |}]
 type 'a u = 'b constraint 'a = 'b N.t
 [%%expect{|
 Line 1, characters 0-37:
 1 | type 'a u = 'b constraint 'a = 'b N.t
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-Error: In this definition, a type variable cannot be deduced
-       from the type parameters.
+Error: In the definition
+         type 'a u = 'b constraint 'a = 'b N.t
+       the type variable 'b cannot be deduced from the type parameters.
 |}]
 
 (* Of course, the internal type should be injective in this parameter *)
@@ -124,8 +126,9 @@ module M : sig type 'a t = private < m : int; .. > end
 Line 3, characters 0-30:
 3 | type 'a u = M : 'a -> 'a M.t u
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-Error: In this definition, a type variable cannot be deduced
-       from the type parameters.
+Error: In the GADT constructor
+         M : 'a -> 'a M.t u
+       the type variable 'a cannot be deduced from the type parameters.
 |}]
 module M : sig type !'a t = private < m : int ; .. > end =
   struct type 'a t = < m : int > end
@@ -192,8 +195,9 @@ let M.G (x : bool) = M.G 3
 Line 3, characters 2-29:
 3 |   type _ x = G : 'a -> 'a u x
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^
-Error: In this definition, a type variable cannot be deduced
-       from the type parameters.
+Error: In the GADT constructor
+         G : 'a X.t -> 'a X.t u x
+       the type variable 'a cannot be deduced from the type parameters.
 |}]
 
 (* Try to be clever *)
@@ -370,8 +374,9 @@ type 'a t = 'b constraint 'a = < b : 'b; c : 'c >
 Line 2, characters 0-27:
 2 | type _ u = M : 'a -> 'a t u (* KO *)
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
-Error: In this definition, a type variable cannot be deduced
-       from the type parameters.
+Error: In the GADT constructor
+         M : < b : 'a; c : 'b > -> < b : 'a; c : 'b > t u
+       the type variable 'b cannot be deduced from the type parameters.
 |}]
 
 
