@@ -29,15 +29,27 @@ type prop = Variance.t list
 type req = surface_variance list
 val property : (Variance.t list, req) property
 
+type variance_variable_context =
+  | Type_declaration of Ident.t * type_declaration
+  | Gadt_constructor of constructor_declaration
+  | Extension_constructor of Ident.t * extension_constructor
+
+type variance_variable_error =
+  | No_variable
+  | Variance_not_reflected
+  | Variance_not_deducible
+
 type variance_error =
-| Variance_not_satisfied of int
-| No_variable
-| Variance_not_reflected
-| Variance_not_deducible
+  | Variance_not_satisfied of int
+  | Variance_variable_error of {
+       error : variance_variable_error;
+       context : variance_variable_context;
+       variable : type_expr
+     }
 
 type error =
-| Bad_variance of variance_error * surface_variance * surface_variance
-| Varying_anonymous
+  | Bad_variance of variance_error * surface_variance * surface_variance
+  | Varying_anonymous
 
 exception Error of Location.t * error
 
@@ -46,7 +58,7 @@ val check_variance_extension :
   Typedtree.extension_constructor -> req * Location.t -> unit
 
 val compute_decl :
-  Env.t -> check:bool -> type_declaration -> req -> prop
+  Env.t -> check:Ident.t option -> type_declaration -> req -> prop
 
 val update_decls :
   Env.t -> Parsetree.type_declaration list ->
